@@ -1,3 +1,8 @@
+2002-07-30  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
+
+	* gamemap.cc,spellbook.{cc,h}:  Save/restore bookmarked spell.
+	* shapes/vgafile.cc:  Update image when offsets are changed.
+
 2002-07-29  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* tqueue.cc,gamewin.cc,Gump_manager.cc:  Pause time queue (with
